[metadata]
name = aionursery
description = A trio-like task supervisor for asyncio
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
project_urls =
    Source Code = https://github.com/aiolibs/aionursery
    Issue Tracker = https://github.com/aiolibs/aionursery/issues
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 7 - Inactive
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Framework :: AsyncIO
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = aionursery
python_requires = >=3.5.2

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-cov

[tool:pytest]
addopts = -rsx --cov --tb=short
testpaths = test_aionursery.py

[coverage:run]
source = aionursery
branch = 1

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

[mypy]
ignore_missing_imports = true
